--- a/pixrus/seller/templates/seller_dashboard.html
+++ b/pixrus/seller/templates/seller_dashboard.html
@@ -129,7 +129,7 @@
     </div>
 
     <div class="button-container">
-        <a href="{% url 'post_pick' %}">
+        <a href="{% url 'lookup' %}">
             <button class="redirect-button">Post Picks</button>
         </a>
         <a href="{% url 'seller_dashboard'  %}">
