--- a/pixrus/buyer/templates/buyer_landing.html
+++ b/pixrus/buyer/templates/buyer_landing.html
@@ -33,7 +33,7 @@
             max-width: 1000px; /* Limits the maximum width of the container */
         }
 
-        .card {
+        .active_card {
             border: 1px solid #444;
             border-radius: 12px;
             padding: 20px;
@@ -45,28 +45,28 @@
             width: 90%; /* Ensures responsiveness */
         }
 
-        .card:hover {
+        .active_card:hover {
             transform: translateY(-5px);
             box-shadow: 0 12px 20px rgba(0, 0, 0, 0.4);
         }
 
-        .card h3 {
+        .active_card h3 {
             margin: 0 0 12px;
             font-size: 1.5rem;
             color: #ffcc00;
         }
 
-        .card p {
+        .active_card p {
             margin: 6px 0;
             font-size: 1rem;
             color: #d6d6d6;
         }
 
-        .card .actions {
+        .active_card .actions {
             margin-top: 20px;
         }
 
-        .card .actions button {
+        .active_card .actions button {
             padding: 10px 20px;
             font-size: 1rem;
             font-weight: bold;
@@ -78,7 +78,7 @@
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
-        .card .actions button:hover {
+        .active_card .actions button:hover {
             transform: translateY(-3px);
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
@@ -152,6 +152,14 @@
             background-color: #ffcc00;
             transform: translateY(-2px);
         }
+            .orange-link {
+    color: orange;
+    text-decoration: none; /* Optional: Remove underline */
+}
+
+.orange-link:hover {
+    text-decoration: underline; /* Optional: Add underline on hover */
+}
 
     </style>
 </head>
@@ -164,14 +172,14 @@
     {% if seller_picks %}
         <H2>Active Picks </H2>
         {% for pick,seller in seller_picks %}
-            <div class="card">
+            <div class="active_card">
                 <h3>{{ pick.game_data.away_team }} at {{ pick.game_data.home_team }}</h3>
                 <p><strong>Event Start:</strong> {{ pick.event_start }}</p>
                 <p><strong>Pick:</strong> {{ pick.type_of_pick }} - {{ pick.pick_data.target_winner }}</p>
                 <p><strong>Pick Odds:</strong> {{ pick.pick_data.odds }}</p>
                 <p><strong>Sportsbook:</strong> {{ pick.pick_data.book_maker }}</p>
                 <p><strong>Unit Amount:</strong> {{ pick.pick_data.bet_amount }}</p>
-                <p>Pick Sold by:<a href="{% url 'profile_view' seller.id %}">{{ seller.user_name }}</a></p>
+                <p>Pick Sold by:<a href="{% url 'profile_view' seller.id %}" class="orange-link">{{ seller.user_name }}</a></p>
             </div>
         {% endfor %}
      {% else %}
