--- a/pixrus/seller/templates/seller_prev_picks.html
+++ b/pixrus/seller/templates/seller_prev_picks.html
@@ -19,7 +19,7 @@
             margin-bottom: 20px;
         }
 
-        .card {
+        .active_card {
             border: 1px solid #444;
             border-radius: 12px;
             padding: 20px;
@@ -28,12 +28,12 @@
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
         }
 
-        .card:hover {
+        .active_card:hover {
             transform: translateY(-5px);
             box-shadow: 0 12px 20px rgba(0, 0, 0, 0.4);
         }
 
-        .card h3 {
+        .active_card h3 {
             font-size: 1.5rem;
             color: #ffcc00;
             margin-bottom: 10px;
